--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
-﻿{
-  "cleanUrls": true,
-  "trailingSlash": false
-}
+$utf8NoBom = New-Object System.Text.UTF8Encoding($false)
+[System.IO.File]::WriteAllText(
+  "vercel.json",
+  '{ "cleanUrls": true, "trailingSlash": false }',
+  $utf8NoBom
+)
+
+git add vercel.json
+git commit -m "Add vercel.json (UTF-8 no BOM)"
+git push
